trying to generate sql script for docker

--- a/RssFilter/Properties/launchSettings.json
+++ b/RssFilter/Properties/launchSettings.json
@@ -32,6 +32,10 @@
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/rss",
       "publishAllPorts": true,
       "useSSL": true
+    },
+    "Azure Dev Spaces": {
+      "commandName": "AzureDevSpaces",
+      "launchBrowser": true
     }
   }
 }
