switch to SQLite and filter items

--- a/RssFilter/appsettings.Development.json
+++ b/RssFilter/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "PostgresConnection": "User ID=postgres;Password=1;Server=localhost;Port=5432;Database=RssFilter;Pooling=true;"
+    "SqliteConnection": "Data Source=db\\mydb.db"
   },
   "Logging": {
     "LogLevel": {
