put projects in kubernetes

--- a/RssFilter/RssFilter.csproj
+++ b/RssFilter/RssFilter.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>f468793c-4827-4c7e-bc03-08ea2445ab01</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <RunPostBuildEvent>OnOutputUpdated</RunPostBuildEvent>
   </PropertyGroup>
 
   <ItemGroup>
