--- a/RssFilter/Dockerfile
+++ b/RssFilter/Dockerfile
@@ -5,7 +5,7 @@ WORKDIR /app
 EXPOSE 80
 EXPOSE 443
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
 WORKDIR /src
 COPY ["RssFilter/RssFilter.csproj", "RssFilter/"]
 RUN dotnet restore "RssFilter/RssFilter.csproj"
