--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# https://stackoverflow.com/a/45606440
-
 version: '3.4'
 
 services:
@@ -8,3 +6,16 @@ services:
     build:
       context: .
       dockerfile: RssFilter/Dockerfile
+    volumes:
+      - db:/app/db
+
+
+  dbupdater:
+    image: ${DOCKER_REGISTRY-}dbupdater
+    build:
+      context: .
+      dockerfile: DbUpdater/Dockerfile
+    volumes:
+      - db:/app/db
+volumes:
+  db:
