--- a/RssFilter/appsettings.json
+++ b/RssFilter/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "https_port": 443,
+  "ConnectionStrings": {
+    "SqliteConnection": "Data Source=db\\mydb.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
