--- a/DbUpdater/DbUpdater.csproj
+++ b/DbUpdater/DbUpdater.csproj
@@ -36,7 +36,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="cd &quot;$(SolutionDir)&quot;&#xD;&#xA;echo cd&#xD;&#xA;docker build -t dbupdater -f dbupdater/dockerfile ." />
+    <Exec Command="cd &quot;$(SolutionDir)&quot;&#xD;&#xA;echo cd&#xD;&#xA;docker build -t dbupdater:dev -f dbupdater/dockerfile ." />
   </Target>
 
 </Project>
