--- a/DbUpdater/Dockerfile
+++ b/DbUpdater/Dockerfile
@@ -1,9 +1,9 @@
 #See https://aka.ms/containerfastmode to understand how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:5.0-buster-slim AS base
+FROM mcr.microsoft.com/dotnet/aspnet:5.0.1-alpine3.12-amd64 AS base
 WORKDIR /app
 
-FROM mcr.microsoft.com/dotnet/sdk:5.0-buster-slim AS build
+FROM mcr.microsoft.com/dotnet/sdk:5.0.101-alpine3.12-amd64 AS build
 WORKDIR /src
 COPY ["DbUpdater/DbUpdater.csproj", "DbUpdater/"]
 RUN sed -i '/<Target /,/<\/Target>/d' DbUpdater/DbUpdater.csproj
