--- a/dbupdater-deployment.yaml
+++ b/dbupdater-deployment.yaml
@@ -1,41 +1,21 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  annotations:
-    kompose.cmd: d:\Distr\kompose.exe convert
-    kompose.version: 1.21.0 (992df58d8)
-  creationTimestamp: null
-  labels:
-    io.kompose.service: dbupdater
+apiVersion: batch/v1beta1
+kind: CronJob
+metadata:   
   name: dbupdater
 spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      io.kompose.service: dbupdater
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-      annotations:
-        kompose.cmd: d:\Distr\kompose.exe convert
-        kompose.version: 1.21.0 (992df58d8)
-      creationTimestamp: null
-      labels:
-        io.kompose.service: dbupdater
+  schedule: "*/10 * * * *"
+  jobTemplate:
     spec:
-      containers:
-      - image: skyblade/dbupdater
-        imagePullPolicy: ""
-        name: dbupdater
-        resources: {}
-        volumeMounts:
-        - mountPath: /app/db
-          name: db
-      restartPolicy: Always
-      serviceAccountName: ""
-      volumes:
-      - name: db
-        persistentVolumeClaim:
-          claimName: db
-status: {}
+      template:
+        spec:
+          containers:
+          - name: dbupdater
+            image: skyblade/rssfilter.dbupdater:latest
+            volumeMounts:
+            - mountPath: /app/db
+              name: db
+          restartPolicy: OnFailure
+          volumes:
+          - name: db
+            persistentVolumeClaim:
+              claimName: db
